# BI-PA2

./: README.md
HomeWork-1/: CMakeLists.txt  main.cpp
HomeWork-2/: CMakeLists.txt  main.cpp
HomeWork-3/: CMakeLists.txt  main.cpp
HomeWork-4/: CMakeLists.txt  main.cpp
HomeWork-5/: CMakeLists.txt  main.cpp
HomeWork-6/: CMakeLists.txt  main.cpp
HomeWork-7/: CMakeLists.txt  main.cpp
Semestralka/: AddExp.cpp  AddExp.h  BigNum.cpp  BinOperator.h  CAddExp.cpp  CAddExp.h  CBigNum.cpp  CBigNum.h  CBinOperator.h  CCalculator.cpp  CCalculator.h  CCparser.h  CDecimal.cpp  CDecimal.h  CDevideExpr.cpp  CDevideExpr.h  CExpression.h  CInteger.cpp  CInteger.h  CLongInteger.cpp  CLongInteger.h  CMakeLists.txt  CMod.cpp  CMod.h  CModExp.cpp  CModExp.h  CMultiplyExp.cpp  CMultiplyExp.h  COperand.cpp  COperand.h  CParser.cpp  CParser.h  CSubtract.cpp  CSubtractExp.h  CVariable.cpp  CVariable.h  Calculator.cpp  Calculator.h  Decimal.cpp  Decimal.h  (+19 more)
homework1/: CMakeLists.txt  main.cpp
